Fixed background formatting. Also added some possibly redundant inset and z-index attributes to sky-container

--- a/src/components/Body/Background/Background.css
+++ b/src/components/Body/Background/Background.css
@@ -1,10 +1,12 @@
 .sky-container {
   width: 100vw;
   height: 100vh;
+  z-index:0;
+  inset:0;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  position: relative;
+  position: fixed;
   
   /* Default Fallback Background */
   background: linear-gradient(
